k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: revenda-veiculos
  labels:
    name: revenda-veiculos
