k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: revenda-app-service
  namespace: revenda-veiculos
  labels:
    app: revenda-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: revenda-app
